IOS fix for the squished logo bug

--- a/src/components/frontpage/Main.scss
+++ b/src/components/frontpage/Main.scss
@@ -21,7 +21,7 @@
         justify-content: center;
 
         #rwc-logo {
-            width: 80px;
+            height: 100px;
             margin-bottom: 10px;
         }
     }
